--- a/Payment_Service/src/main/resources/application.properties
+++ b/Payment_Service/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sales
 spring.datasource.username=root
 spring.datasource.password=admin
 logging.level.root=WARN
+
+spring.application.name=PAYMENT-SERVICE
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
