--- a/order_service/src/main/resources/application.properties
+++ b/order_service/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.username=root
 spring.datasource.password=admin
 logging.level.root=WARN
 
+
+spring.application.name=ORDER-SERVICE
+
+
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+eureka.instance.hostname=localhost
+
